syntax = "proto3";
option go_package = "github.com/beomdevops/go-grpc/proto";
package proto;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
  }
  
  message HelloRequest {
    string name = 1;
  }
  
  message HelloReply {
    string message = 1;
  }